--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap');
+
 body{
     
-    font-family: "Poppins", sans-serif;
+    font-family: "Noto Serif", serif;
     margin: 0px;
 
 }
